tests/valid_inputs/false_is_zero.cpp
// test that false is converted to int 0
int main() {
	bool b = false;
	return b;
}
