tests/invalid_inputs/sema/nullptr_eq_nullptr.cpp
// test that nullptr is not comparable to itself
int main() {
	nullptr == nullptr;
}
